# jenkins

./: .gitattributes  NOTICE  README.md  docker-compose.override.yml  docker-compose.prod.example.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-smoke.yml
agents/: README.md
agents/base/: Dockerfile  README.md  register-agent.sh
agents/docker/: Dockerfile
agents/go/: Dockerfile
agents/java/: Dockerfile
agents/kubernetes/: Dockerfile
agents/node/: Dockerfile
agents/python/: Dockerfile
docs/: ad-auth.md  architecture.md  backup-restore.md  onboarding.md  operations.md  pipelines.md  plugins.md  preflight-production.md  security.md
examples/go-app/: Dockerfile  README.md
examples/java-maven-app/: Dockerfile  README.md  pom.xml
examples/node-app/: Dockerfile  README.md  package.json
examples/python-app/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
jenkins/: Dockerfile  plugins.txt
jenkins/casc/: credentials.example.yaml  folders.yaml  jenkins.yaml  jobs.yaml  nodes.yaml  security.yaml  tools.yaml  views.yaml
jenkins/init.groovy.d/: 01-system.groovy  02-security.groovy  03-seed.groovy
jenkins/seed-jobs/: seed.groovy
jenkins/shared-library/: README.md
nexus/: README.md  bootstrap.md
nginx/: default.conf
pipelines/cd/: Jenkinsfile.docker.cd  Jenkinsfile.ecs.cd  Jenkinsfile.k8s.cd  Jenkinsfile.vm.cd
pipelines/ci/: Jenkinsfile.go.ci  (+4 more)
scripts/: backup-jenkins.sh  bootstrap.sh  plugin-audit.sh  preflight-production.sh  restore-jenkins.sh  smoke-tests.sh  wait-for-services.sh
(+18 files in other folders)
